--- a/BlazorComponents/Server/appsettings.json
+++ b/BlazorComponents/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorComponents.Server-4416924D-E5B1-41FB-9402-F6A4F754D121;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "DataSource=App.db"
   },
   "Logging": {
     "LogLevel": {
